update watchface to use correct colors, text spacing.

--- a/sunshinewatchface/src/main/res/values/strings.xml
+++ b/sunshinewatchface/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SunshineWatchface</string>
     <string name="my_digital_name">Sunshine</string>
+    <string name="date_format">EEE, MMM d, yyyy</string>
 </resources>
